--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,17 +4,24 @@ title: About
 date: 2021-03-19
 ---
 
-# Your Name
+# Kyle Ancheta — Developer
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+Hello there, I'm a **frontend developer** open for hire! I'm usually a *product designer* but this site serves as my developer portfolio.
 
-[**Deploy your own**](https://vercel.com/new/clone?demo-title=Portfolio+Starter+Kit&demo-description=Easily+create+a+portfolio+with+Next.js+and+Markdown.&demo-url=https%3A%2F%2Fdemo.vercel.blog%2F&demo-image=%2F%2Fimages.ctfassets.net%2Fe5382hct74si%2F2aC4eHLrOKmT4fnLfoNGK2%2F14b1e6bbe598ec023ffe85001d31e634%2FCleanShot_2022-04-11_at_23.12.01.png&project-name=Portfolio+Starter+Kit&repository-name=portfolio-starter-kit&repository-url=https%3A%2F%2Fgithub.com%2Fvercel%2Fnextjs-portfolio-starter&from=templates&skippable-integrations=1&teamCreateStatus=hidden) in a few minutes.
+Though I'm usually a designer, I've always enjoyed the nuance and technicalities of building software. I'm at a point now where I can be that brdige between developer teams and the user experience.
 
 ---
+## Projects
+- [Pokeparty](https://pokeparty.fun) <br/>
+My little playground to practice my frontend skills. Built with React, utilizing the pokeAPI. Features include: dark mode, a theme selector, Pokemon party selection/randomization, and viewing Pokemon stats.
+- [Vanlife](https://dazzling-griffin-922f53.netlify.app/) <br/>
+A tutorial project, an AirBnB-like app with vans, exploring the features of React Router. Features include authenticated routes and basic user authentication. Optimized for mobile…
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+---
+## Socials
+- Posts [@kyle](https://posts.cv/kyle)
+- Read [@kyle](https://read.cv/kyle)
+- GitHub [@kyleancheta](https://github.com/kyleancheta)
+- Twitter [@kyleancheta_](https://twitter.com/kyleancheta_)
+- Instagram [@kyleancheta](https://instagram.com/kyleancheta)
