social link changes

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,8 +20,8 @@ A tutorial project, an AirBnB-like app with vans, exploring the features of Reac
 
 ---
 ## Socials
-- Posts [@kyle](https://posts.cv/kyle)
-- Read [@kyle](https://read.cv/kyle)
-- GitHub [@kyleancheta](https://github.com/kyleancheta)
-- Twitter [@kyleancheta_](https://twitter.com/kyleancheta_)
-- Instagram [@kyleancheta](https://instagram.com/kyleancheta)
+- [GitHub](https://github.com/kyleancheta)
+- [Posts](https://posts.cv/kyle)
+- [Read](https://read.cv/kyle)
+- [Design Portfolio](https://kyleancheta.com)
+
