better changes don't ask me what

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,27 +1,45 @@
 ---
 type: page
-title: About
-date: 2021-03-19
+title: 👽
+date: 2023-10-11
 ---
 
-# Kyle Ancheta — Developer
+# Kyle Ancheta <br/> <span className="subtitle">Frontend Developer</span>
 
 
-Hello there, I'm a **frontend developer** open for hire! I'm usually a *product designer* but this site serves as my developer portfolio.
+Hello there 👋
 
-Though I'm usually a designer, I've always enjoyed the nuance and technicalities of building software. I'm at a point now where I can be that brdige between developer teams and the user experience.
+I'm Kyle, a **frontend developer** open for hire! In the world of tech, I primarily consider myself a *product designer* but 
+I've always enjoyed the nuance and technicalities of building software, and making websites in general.
+
+Though I have a degree in computer science, I consider myself self-taught as most of my developer knowledge I gained after my degree... *heh*. 
+Regardless of my timeline, I'm glad to say I'm now at a point where I can be that bridge between developer teams and the user experience. 🌉
 
 ---
 ## Projects
-- [Pokeparty](https://pokeparty.fun) <br/>
-My little playground to practice my frontend skills. Built with React, utilizing the pokeAPI. Features include: dark mode, a theme selector, Pokemon party selection/randomization, and viewing Pokemon stats.
-- [Vanlife](https://dazzling-griffin-922f53.netlify.app/) <br/>
+
+### [Pokeparty](https://pokeparty.fun) <br/>
+My little playground to practice my frontend skills. Built with modern React, utilizing the pokeAPI. Features include: dark mode, a theme selector, Pokemon party selection/randomization, and viewing Pokemon stats.
+
+*Project concepts*:
+    - Built in React 18, using React Hooks
+    - UI Components were built from scratch, including but not limited to: buttons, cards, modals, callouts, navigation, etc.
+    - A simple drag-and-drop utility
+    - Custom CSS animations
+
+### [Vanlife](https://dazzling-griffin-922f53.netlify.app/) <br/>
 A tutorial project, an AirBnB-like app with vans, exploring the features of React Router. Features include authenticated routes and basic user authentication. Optimized for mobile…
 
+*Project concepts*:
+- A single-page app, with 10+ routes
+- Filtering functionality
+- Protected routes and basic user authentication
+- Utilizing Firebase
+
 ---
-## Socials
+## Links
 - [GitHub](https://github.com/kyleancheta)
-- [Posts](https://posts.cv/kyle)
-- [Read](https://read.cv/kyle)
+- [LinkedIn](https://linkedin.com/in/kyle-ancheta)
+- [Resume](https://read.cv/kyle)
 - [Design Portfolio](https://kyleancheta.com)
 
