--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,8 @@ Hello there 👋
 I'm Kyle, a **frontend developer** open for hire! In the world of tech, I primarily consider myself a *product designer* but 
 I've always enjoyed the nuance and technicalities of building software, and making websites in general.
 
-Though I have a degree in computer science, I consider myself self-taught as most of my developer knowledge I gained after my degree... *heh*. 
+Though I have a degree in computer science, I consider myself self-taught as most of my developer knowledge I gained after my degree... But it still 
+developed *(heh)* my problem-solving abilities and I learned some *useful* things, such as Big O notation and graph thory. 
 Regardless of my timeline, I'm glad to say I'm now at a point where I can be that bridge between developer teams and the user experience. 🌉
 
 ---
